# silos

./: Cargo.toml  LICENSE.md  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: release.yml
.helix/: languages.toml
snippets/generate/go/: base64_encoding.kdl  simple_worker.kdl
snippets/generate/sh/: loop-numbers.kdl
snippets/refactor/go/: base64.kdl  filepath-parent.kdl  mutations.kdl
snippets/v1/fish/: path-entries.kdl  var-prompt.kdl
snippets/v1/go/: base64_encoding.json  simple_worker.json
snippets/v1/sh/: loop-files.kdl  lstrip.kdl  rstrip.kdl  trim-spaces.kdl
snippets/v2/go/: mutations.kdl
src/: args.rs  embed.rs  lsp.rs  main.rs  mutation.rs  sources.rs  state.rs
src/v1/: api.rs  errors.rs  mod.rs
src/v2/: api.rs  errors.rs  mod.rs  mutation.rs
