[package]
name = "silos"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.5.39", features = ["derive"] }
derive_more = "2.0.1"
glob = "0.3.2"
hf-hub = "0.4.2"
hora = "0.1.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokenizers = "0.21.1"
