[package]
name = "silos"
version = "5.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.5.41", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display", "error"] }
hf-hub = "0.4.2"
hora = "0.1.1"
kdl = "6.3.4"
serde_json = "1.0.140"
tokenizers = "0.21.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tree-sitter = "0.25.8"
tree-sitter-c = "0.24.1"
tree-sitter-go = "0.23.4"
tree-sitter-rust = "0.24.0"
tokio = { version = "1.45.1", features = ["io-std", "macros", "rt", "rt-multi-thread"] }
tower-lsp = "0.20.0"
